# dotfiles-nix

./: .emmyrc.json  .gitignore  .sops.yaml  AGENTS.md  CLAUDE.md  Justfile  Makefile  README.org  TODO.org  flake.nix  lefthook.yml  mermaid-preview.md  treefmt.nix
nvim/rust/: .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md  RUST_LINTS.md  clippy.toml  justfile  lock-hashes.nix  plan.md  smear_cursor_ssot_spec.md
nvim/rust/autocmds/: Cargo.toml
nvim/rust/autocmds/src/: lib.rs
nvim/rust/autocmds_core/: Cargo.toml
nvim/rust/autocmds_core/src/: lib.rs
nvim/rust/docs/: porting-plugins-to-rust.md  position-spec.md  review.md  smear-cursor-renderer.md  smear-cursor-testing-taxonomy.md  smear_cursor_battery_plan.md  smear_cursor_optimization_plan.md  smear_cursor_static_battery_plan_2026-04-03.md  ssot.md  state_ownership.md
nvim/rust/libs/nvim-oxi-utils/: Cargo.toml
nvim/rust/libs/nvim-oxi-utils/src/: decode.rs  error.rs  indexed_registry.rs  lib.rs
nvim/rust/libs/nvim-oxi-utils/tests/: dict.rs
nvim/rust/libs/nvim-utils/: Cargo.toml
nvim/rust/libs/nvim-utils/src/: lib.rs  mode.rs
nvim/rust/libs/support/: Cargo.toml
nvim/rust/libs/support/src/: cycle.rs  lib.rs
nvim/rust/nvim_errors/: Cargo.toml
nvim/rust/nvim_oxi_utils/: Cargo.toml
nvim/rust/nvim_oxi_utils/src/: lib.rs
nvim/rust/nvim_oxi_utils/tests/: dict.rs
nvim/rust/nvim_utils/: Cargo.toml
nvim/rust/nvim_utils/src/: lib.rs
nvim/rust/plans/: position-foundations.md  position-observation.md  position-runtime.md  position-spec.md  position-validation.md
nvim/rust/plugins/autocmds/: Cargo.toml
nvim/rust/plugins/autocmds/src/: lib.rs  types.rs
nvim/rust/plugins/autocmds/src/integrations/: mod.rs  wezterm.rs  wezterm_core.rs
nvim/rust/plugins/autocmds/src/machines/: mod.rs
nvim/rust/plugins/autocmds/src/types/: autocmd_action.rs  oil_actions_parse.rs  oil_last_buf_machine.rs
nvim/rust/plugins/plugin_util/: Cargo.toml
nvim/rust/plugins/plugin_util/src/: definition_flow.rs  lib.rs
nvim/rust/plugins/project-root/: Cargo.toml
nvim/rust/plugins/project-root/src/: buffer.rs  config.rs  core.rs  lib.rs  plugin.rs  types.rs
nvim/rust/plugins/project_root/: Cargo.toml
nvim/rust/plugins/project_root/src/: buffer.rs  config.rs  core.rs  lib.rs  plugin.rs  types.rs
nvim/rust/plugins/readline/: Cargo.toml
nvim/rust/plugins/readline/src/: core.rs  lib.rs
nvim/rust/plugins/smear-cursor/: Cargo.toml
nvim/rust/plugins/smear-cursor/perf/: README.md  adaptive-buffer-policy-current.md  current.md  long-animation-allocation-current.md  particle-degraded-buffer-current.md  particle-toggle-current.md  planner-compile-current.md  validation-counters-current.md  window-pool-cap-current.md
nvim/rust/plugins/smear-cursor/scripts/: capture_long_animation_allocations.sh  capture_perf_snapshot.sh  capture_validation_counters.sh  compare_buffer_perf_modes.sh  compare_particle_probe_perf.sh  compare_particle_toggle_perf.sh  compare_planner_perf.sh  compare_window_pool_cap_perf.sh  compare_window_switch_scenarios.sh  perf_particle_toggle.lua  perf_window_switch.lua  pinpoint_active_regression.sh  run_perf_window_switch.sh  test_cursor_color_probe.sh  test_cursor_color_probe_extmarks.lua  test_cursor_color_probe_treesitter.lua  test_timer_bridge.lua  test_timer_bridge.sh
nvim/rust/plugins/smear-cursor/scripts/lib/: perf_env.sh  (+1 more)
nvim/rust/plugins/smear-cursor/src/: allocation_counters.rs  config.rs  doc_sync.rs  events.rs  host.rs  lib.rs  lua.rs  mutex.rs  step.rs  types.rs
nvim/rust/plugins/smear_cursor/: Cargo.toml
nvim/rust/plugins/smear_cursor/investigations/: latent-field-compile.md  ribbon-state-enumeration.md  scheduled-drain-current-state.md
nvim/rust/plugins/smear_cursor/scripts/: compare_particle_probe_perf.sh  perf_window_switch.lua  pinpoint_active_regression.sh  run_perf_window_switch.sh  test_timer_bridge.lua  test_timer_bridge.sh
nvim/rust/plugins/smear_cursor/src/: animation.rs  config.rs  draw.rs  events.rs  lib.rs  lua.rs  mutex.rs  octant_chars.rs  reducer.rs  state.rs  step.rs  types.rs
nvim/rust/plugins/snacks-preview/: Cargo.toml
nvim/rust/plugins/snacks-preview/src/: args.rs  bridge.rs  lib.rs  preview.rs  reducer.rs  state.rs
nvim/rust/plugins/snacks_preview/: Cargo.toml
nvim/rust/plugins/snacks_preview/src/: args.rs  bridge.rs  core.rs  lib.rs  preview.rs  reducer.rs  state.rs
nvim/rust/plugins/text/: Cargo.toml
nvim/rust/plugins/text/src/: lib.rs
nvim/rust/plugins/theme-switcher/: Cargo.toml
nvim/rust/plugins/theme-switcher/src/: args.rs  lib.rs  picker.rs
nvim/rust/plugins/theme_switcher/: Cargo.toml
nvim/rust/plugins/theme_switcher/src/: args.rs  lib.rs  picker.rs
nvim/rust/project_root/: Cargo.toml
nvim/rust/project_root/src/: buffer.rs  config.rs  lib.rs  plugin.rs
nvim/rust/project_root_core/: Cargo.toml
nvim/rust/project_root_core/src/: lib.rs
nvim/rust/readline/: Cargo.toml
nvim/rust/readline/src/: lib.rs
nvim/rust/readline_core/: Cargo.toml
nvim/rust/snacks_preview/: Cargo.toml
nvim/rust/snacks_preview/src/: args.rs  bridge.rs  lib.rs  preview.rs  state.rs
nvim/rust/snacks_preview_core/: Cargo.toml
nvim/rust/snacks_preview_core/src/: lib.rs
nvim/rust/support/plugin-util/: Cargo.toml
nvim/rust/support/plugin-util/src/: definition_flow.rs  lib.rs
nvim/rust/support/src/: lib.rs
nvim/rust/text/: Cargo.toml
nvim/rust/text/src/: lib.rs
nvim/rust/text_core/: Cargo.toml
nvim/rust/text_core/src/: lib.rs
nvim/rust/util/: Cargo.toml
nvim/rust/util/src/: lib.rs
nvim/rust/util_core/: Cargo.toml
nvim/rust/util_core/src/: lib.rs
nvim/rust/utils/nvim-oxi-utils/: Cargo.toml
nvim/rust/utils/nvim-oxi-utils/src/: decode.rs  error.rs  indexed_registry.rs  lib.rs
nvim/rust/utils/nvim-oxi-utils/tests/: dict.rs
nvim/rust/utils/nvim-utils/: Cargo.toml
nvim/rust/utils/nvim-utils/src/: lib.rs  mode.rs
nvim/rust/utils/smear-perf-report/: Cargo.toml
nvim/rust/utils/smear-perf-report/src/: error.rs  log.rs  main.rs  query.rs
nvim/rust/utils/support/: Cargo.toml
nvim/rust/utils/support/src/: cycle.rs  lib.rs
(+594 files in other folders)
