[workspace]
resolver = "2"
members = [
  "plugins/autocmds",
  "libs/nvim-oxi-utils",
  "plugins/project_root",
  "plugins/readline",
  "plugins/smear_cursor",
  "plugins/snacks_preview",
  "plugins/theme_switcher",
  "libs/support",
  "plugins/text",
  "plugins/plugin_util",
  "libs/nvim-utils",
]

[workspace.package]
version = "0.0.0"
# Track the edition for all workspace crates in one place. Individual
# crates can still override this value, but keeping it here means new
# crates created with `cargo new -w ...` automatically inherit the 2024
# edition.
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Internal
nvim-oxi-utils = { path = "libs/nvim-oxi-utils" }
nvim-utils = { path = "libs/nvim-utils" }
support = { path = "libs/support" }

# External
derive_more = { version = "2.1.1", features = ["display"] }
nonempty = "0.12.0"

[workspace.lints.clippy]
expect_used = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
unwrap_used = "deny"

[patch.crates-io]
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi", rev = "fef0f72702f6928815eeec358d7aa834b7290ded" }
