[package]
name = "snacks_preview"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-10"] }
nvim-utils = { path = "../nvim_utils" }
once_cell = "1.19"
nvim-oxi-utils = { path = "../nvim_oxi_utils" }
