[package]
name = "my_util"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11"] }
nvim-utils = { path = "../nvim_utils" }
nvim-oxi-utils = { path = "../nvim_oxi_utils" }
util-core = { path = "../util_core" }
