[package]
name = "rs_autocmds"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
nvim-oxi = { workspace = true, features = ["mlua", "libuv"] }
nvim-utils = { workspace = true }
nvim-oxi-utils = { workspace = true }
hostname = "0.4"
percent-encoding = "2.3"
serde = { workspace = true, features = ["derive"] }
support = { workspace = true }
