[package]
name = "nvimrs-autocmds"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
nvim-oxi = { workspace = true, features = ["mlua", "libuv"] }
nvimrs-nvim-utils = { workspace = true }
nvimrs-nvim-oxi-utils = { workspace = true }
hostname = "0.4"
percent-encoding = "2.3"
serde = { workspace = true, features = ["derive"] }
nvimrs-support = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
pretty_assertions = { workspace = true }
