[package]
name = "rs_plugin_util"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11"] }
nvim-utils = { workspace = true }
nvim-oxi-utils = { workspace = true }
support = { workspace = true }
