[package]
name = "rs_plugin_util"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
nvim-oxi = { workspace = true }
nvim-utils = { workspace = true }
nvim-oxi-utils = { workspace = true }
support = { workspace = true }
