[package]
name = "rs_project_root"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11"] }
nvim-utils = { path = "../../libs/nvim-utils" }
nvim-oxi-utils = { path = "../../libs/nvim-oxi-utils" }
nonempty = { workspace = true }
