[package]
name = "nvimrs-smear-cursor"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
nvim-oxi = { workspace = true, features = ["libuv"] }
nvimrs-nvim-oxi-utils = { workspace = true }
nvimrs-nvim-utils = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
pretty_assertions = { workspace = true }
