[package]
name = "nvimrs-smear-cursor"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = []
perf-counters = []

[lints]
workspace = true

[dependencies]
nvim-oxi = { workspace = true }
nvimrs-nvim-oxi-utils = { workspace = true }
nvimrs-nvim-utils = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
pretty_assertions = { workspace = true }
