[package]
name = "rs_smear_cursor"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11", "libuv"] }
nvim-oxi-utils = { path = "../../libs/nvim-oxi-utils" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
proptest = "1.6"
