[package]
name = "rs_smear_cursor"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
nvim-oxi = { workspace = true, features = ["libuv"] }
nvim-oxi-utils = { workspace = true }
nvim-utils = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
proptest = { workspace = true }
