[package]
name = "nvimrs-snacks-preview"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
nvim-oxi = { workspace = true, features = ["mlua"] }
nvimrs-nvim-utils = { workspace = true }
nvimrs-nvim-oxi-utils = { workspace = true }
serde = { workspace = true, features = ["derive"] }
nvimrs-support = { workspace = true }
