[package]
name = "rs_snacks_preview"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
nvim-oxi = { workspace = true, features = ["mlua"] }
nvim-utils = { workspace = true }
nvim-oxi-utils = { workspace = true }
serde = { workspace = true, features = ["derive"] }
support = { workspace = true }
