[package]
name = "nvimrs-theme-switcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
nvim-oxi = { workspace = true }
nvimrs-nvim-oxi-utils = { workspace = true }
nonempty = { workspace = true }
serde = { workspace = true, features = ["derive"] }
nvimrs-support = { workspace = true }
