[package]
name = "rs_theme_switcher"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11"] }
nvim-oxi-utils = { path = "../../libs/nvim-oxi-utils" }
nonempty = { workspace = true }
support = { path = "../../libs/support" }
serde = { version = "1.0", features = ["derive"] }
