[package]
name = "rs_theme_switcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
nvim-oxi = { workspace = true }
nvim-oxi-utils = { workspace = true }
nonempty = { workspace = true }
serde = { workspace = true, features = ["derive"] }
support = { workspace = true }
