[package]
name = "nvimrs-nvim-oxi-utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
nvim-oxi = { workspace = true, features = ["mlua"] }
serde = { workspace = true }
nvimrs-support = { workspace = true }
thiserror = { workspace = true }
